Последняя страница готова

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav class="menu">
             <a href="index.html" class="menu-link">home</a>
             <a href="products.html" class="menu-link">products</a>
-            <a href="" class="menu-link">history</a>
-            <a href="" class="menu-link">showroom</a>
+            <a href="#" class="menu-link">history</a>
+            <a href="#" class="menu-link">showroom</a>
             <a href="contacts.html" class="menu-link">contact</a>
             <input type="search" name="" id="menu-search">
         </nav>
@@ -30,7 +30,7 @@
             <p class="header-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt powder-coated black
                 or highly polished chrome.</p>
-            <a href="#" class="order-btn">order us</a>
+            <a href="product_page.html" class="order-btn">order us</a>
         </div>
         <div class="pagination">
             <a class="pagination-dot"></a>
@@ -50,28 +50,28 @@
             <div class="featured-product">
                 <img class="featured-product-img" src="img/content/product-1.jpg" alt="ProductImg" width="270"
                      height="270">
-                <a class="featured-product-a" href=""></a>
+                <a class="featured-product-a" href="product_page.html"></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
                 <img class="featured-product-img" src="img/content/product-2.jpg" alt="ProductImg" width="270"
                      height="270">
-                <a class="featured-product-a" href=""></a>
+                <a class="featured-product-a" href="product_page.html"></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
                 <img class="featured-product-img" src="img/content/product-3.jpg" alt="ProductImg" width="270"
                      height="270">
-                <a class="featured-product-a" href=""></a>
+                <a class="featured-product-a" href="product_page.html"></a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
             <div class="featured-product">
                 <img class="featured-product-img" src="img/content/product-4.jpg" alt="ProductImg" width="270"
                      height="270">
-                <a class="featured-product-a" href=""></a>
+                <a class="featured-product-a" href="">product_page.html</a>
                 <span class="featured-product-span">fishnet chair</span>
                 <p class="featured-product-p">Seat and back with upholstery made of cold cure foam.</p>
             </div>
@@ -83,41 +83,41 @@
             <span class="exclusive-itm-h">fishnet chair</span>
             <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt powder-coated black or highly polished chrome.</p>
-            <a href="#" class="order-btn">order us</a>
+            <a href="product_page.html" class="order-btn">order us</a>
         </div>
         <div class="exclusive-itm">
             <span class="exclusive-itm-ticket">exclusive</span>
             <span class="exclusive-itm-h">fishnet chair</span>
             <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt powder-coated black or highly polished chrome.</p>
-            <a href="#" class="order-btn">order us</a>
+            <a href="product_page.html" class="order-btn">order us</a>
         </div>
     </section>
     <section class="trending">
         <span class="trending-h">trending products</span>
         <a href="products.html" class="exploreAll">explore all</a>
         <div class="trending-container">
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
-            <a href="#" class="trending-itm">
+            <a href="product_page.html" class="trending-itm">
                 <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
                      height="370">
             </a>
@@ -129,7 +129,7 @@
             <h1 class="hotDeal-info-h1">fishnet chair</h1>
             <p class="hotDeal-info-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt powder-coated black.</p>
-            <a href="#" class="order-btn">order us</a>
+            <a href="product_page.html" class="order-btn">order us</a>
         </div>
         <div class="pagination">
             <a class="pagination-dot"></a>
@@ -143,18 +143,18 @@
             <span class="exclusive-bigItm-h">fishnet chair</span>
             <p class="exclusive-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
                 matt.</p>
-            <a href="#" class="order-btn">order us</a>
+            <a href="product_page.html" class="order-btn">order us</a>
         </div>
-        <a href="#" class="exclusive-smallItm">
+        <a href="product_page.html" class="exclusive-smallItm">
             <img src="img/content/exclusive2_small1.jpg" alt="Product" width="270" height="270">
         </a>
-        <a href="#" class="exclusive-smallItm">
+        <a href="product_page.html" class="exclusive-smallItm">
             <img src="img/content/exclusive2_small2.jpg" alt="Product" width="270" height="270">
         </a>
-        <a href="#" class="exclusive-smallItm">
+        <a href="product_page.html" class="exclusive-smallItm">
             <img src="img/content/exclusive2_small3.jpg" alt="Product" width="270" height="270">
         </a>
-        <a href="#" class="exclusive-smallItm">
+        <a href="product_page.html" class="exclusive-smallItm">
             <img src="img/content/exclusive2_small4.jpg" alt="Product" width="270" height="270">
         </a>
     </section>
