--- a/product_page.html
+++ b/product_page.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Our Products Range</title>
+    <title>Product</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="main-header main-header-contacts">
-    <div class="header-top">
+<header class="main-header product-main-header">
+    <div class="header-top product-main-header-top">
         <a href="#" class="logo">
             <svg width="185px" height="22px" class="logo-svg">
                 <path d="M184.712,19.699 L178.424,19.699 L176.407,15.330 L174.319,15.330 L174.319,19.699 L168.751,19.699 L168.751,2.873 L176.887,2.873 C181.448,2.873 184.64,5.57 184.64,8.898 C184.64,11.346 183.128,13.170 181.400,14.226 L184.712,19.699 ZM176.887,7.97 L174.319,7.97 L174.319,11.106 L176.887,11.106 C178.87,11.106 178.784,10.362 178.784,9.66 C178.784,7.818 178.87,7.97 176.887,7.97 ZM153.152,19.939 C147.799,19.939 143.911,16.290 143.911,11.274 C143.911,6.281 147.799,2.705 153.152,2.705 C158.504,2.705 162.392,6.305 162.392,11.274 C162.392,16.267 158.504,19.939 153.152,19.939 ZM153.224,7.338 C151.280,7.338 149.623,8.994 149.623,11.298 C149.623,13.602 151.303,15.307 153.224,15.307 C155.144,15.307 156.680,13.602 156.680,11.298 C156.680,8.994 155.144,7.338 153.224,7.338 ZM131.983,2.873 L137.552,2.873 L137.552,19.699 L131.983,19.699 L131.983,2.873 ZM119.456,19.699 L117.440,15.330 L115.352,15.330 L115.352,19.699 L109.783,19.699 L109.783,2.873 L117.920,2.873 C122.481,2.873 125.97,5.57 125.97,8.898 C125.97,11.346 124.161,13.170 122.432,14.226 L125.745,19.699 L119.456,19.699 ZM117.920,7.97 L115.352,7.97 L115.352,11.106 L117.920,11.106 C119.120,11.106 119.816,10.362 119.816,9.66 C119.816,7.818 119.120,7.97 117.920,7.97 ZM88.424,2.873 L102.657,2.873 L102.657,7.97 L93.992,7.97 L93.992,9.162 L101.865,9.162 L101.865,13.386 L93.992,13.386 L93.992,15.474 L102.873,15.474 L102.873,19.699 L88.424,19.699 L88.424,2.873 ZM77.505,19.699 L71.936,19.699 L71.936,7.266 L67.160,7.266 L67.160,2.873 L82.305,2.873 L82.305,7.266 L77.505,7.266 L77.505,19.699 ZM49.761,11.106 L49.761,19.699 L44.696,19.699 L44.696,2.873 L49.353,2.873 L56.1,11.514 L56.1,2.873 L61.42,2.873 L61.42,19.699 L56.385,19.699 L49.761,11.106 ZM31.929,2.873 L37.497,2.873 L37.497,19.699 L31.929,19.699 L31.929,2.873 ZM12.62,12.656 L21.250,12.656 L21.250,21.843 L12.62,21.843 L12.62,12.656 ZM12.62,0.843 L21.250,0.843 L21.250,10.31 L12.62,10.31 L12.62,0.843 ZM0.249,12.656 L9.437,12.656 L9.437,21.843 L0.249,21.843 L0.249,12.656 ZM0.249,0.843 L9.437,0.843 L9.437,10.31 L0.249,10.31 L0.249,0.843 Z"/>
@@ -23,87 +23,54 @@
             <input type="search" name="" id="menu-search">
         </nav>
     </div>
-    <div class="header-bot header-bot-contacts">
-        <h1 class="header-contacts-h1">Our Products Range</h1>
-    </div>
 </header>
-<main class="main-container">
-    <section class="featured products-products">
-        <div class="categorySwitcher productsCategorySwitcher">
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">all</a>
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">home</a>
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">office</a>
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">furniture</a>
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">modern</a>
-            <a href="#" class="categorySwitcher-links productsCategorySwitcher-link">classic</a>
+<main class="product-main">
+    <div class="product-categories">
+        <a href="#" class="product-categories-link">all</a>
+        <a href="#" class="product-categories-link">home</a>
+        <a href="#" class="product-categories-link">office</a>
+        <a href="#" class="product-categories-link">furniture</a>
+        <a href="#" class="product-categories-link">modern</a>
+        <a href="#" class="product-categories-link">classic</a>
+    </div>
+    <section class="product">
+        <div class="product-images">
+            <img src="img/content/product_product.jpg" alt="Product" class="product-img" width="570" height="570">
+            <div class="product-img-switcher">
+                <a href="#" class="product-img-switcher-link"></a>
+                <a href="#" class="product-img-switcher-link"></a>
+                <a href="#" class="product-img-switcher-link"></a>
+            </div>
         </div>
-        <div class="trending-container">
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending4.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending5.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
-            <a href="product_page.html" class="trending-itm">
-                <img src="img/content/trending6.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
-                     height="370">
-            </a>
+        <div class="product-info">
+            <span class="product-info-heading">fishnet chair</span>
+            <span class="product-info-ticket">hot deal</span>
+            <span class="product-info-price">$ <span class="product-info-price-value">36.7</span> /sq</span>
+            <a href="#" class="order-btn product-order-btn">order us</a>
+            <p class="product-info-description">The majesty of Mountains - Ugmonk style.</p>
+            <p class="product-info-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
+            <p class="product-info-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident.</p>
         </div>
-        <input type="checkbox" id="refresh-btn-activator">
-        <label for="refresh-btn-activator" class="refresh-btn"></label>
     </section>
-    <section class="exclusive">
-        <div class="exclusive-itm">
-            <span class="exclusive-itm-ticket">exclusive</span>
-            <span class="exclusive-itm-h">fishnet chair</span>
-            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
-                matt powder-coated black or highly polished chrome.</p>
-            <a href="product_page.html" class="order-btn">order us</a>
-        </div>
-        <div class="exclusive-itm">
-            <span class="exclusive-itm-ticket">exclusive</span>
-            <span class="exclusive-itm-h">fishnet chair</span>
-            <p class="exclusive-itm-p">Seat and back with upholstery made of cold cure foam. Steel frame, available in
-                matt powder-coated black or highly polished chrome.</p>
-            <a href="product_page.html" class="order-btn">order us</a>
+    <section class="trending">
+        <span class="trending-h">related products</span>
+        <a href="products.html" class="exploreAll">explore all</a>
+        <div class="trending-container related-container">
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending1.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending2.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
+            <a href="#" class="trending-itm">
+                <img src="img/content/trending3.jpg" alt="Trending-ITM" class="trending-itm-img" width="370"
+                     height="370">
+            </a>
         </div>
     </section>
 </main>
